# TV-Notify

./: Cargo.toml  Readme.md  modetest_config.toml  vcgencmd_config.toml
src/: command.rs  config.rs  main.rs  mqtt.rs
