[package]
name = "tv-notify"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
paho-mqtt = {version = "0.11", default-features = false, features = ["bundled"]}
log = "0.4"
env_logger = "0.9.3"
systemd-journal-logger = "0.5.1"
